--- a/README.adoc
+++ b/README.adoc
@@ -75,9 +75,9 @@ Learn more about containers on the https://www.docker.com/what-container[officia
 
 Consider a scenario where you need to deploy your application on another environment. Your application
 works on your local machine, but when you try to run it on your cloud production environment, it breaks. You do
-some debugging and discover that you built your application with Java 8, but this container environment has only 
+some debugging and discover that you built your application with Java 8, but this cloud production environment has only 
 Java 11 installed. Although this issue is generally easy to fix, you don't want your application to be missing 
-dozens of version-specific dependencies. You can develop your application in this container environment, but that 
+dozens of version-specific dependencies. You can develop your application in this cloud environment, but that 
 requires you to rebuild and repackage your application every time you update your code and wish to test it.
 
 To avoid this kind of problem, you can instead choose to develop your application in a container locally, bundled together with the
